# newer-type

./: Cargo.toml  LICENSE  README.md  lib.rs  memo.md  rustfmt.toml
.github/workflows/: rust.yml
macro/: Cargo.toml  implement.rs  implement_internal.rs  lib.rs  target.rs
std/: Cargo.toml
std/src/: alloc.rs  borrow.rs  cmp.rs  convert.rs  error.rs  fmt.rs  future.rs  hash.rs  io.rs  iter.rs  lib.rs  net.rs  ops.rs  process.rs  string.rs  task.rs
std/tests/: alloc.rs  borrow.rs  cmp.rs  error.rs  fmt.rs  io.rs  iter.rs  ops.rs
tests/: complex.rs  enum.rs  multi_self.rs  std_trait.rs  string.rs  struct.rs  test2.rs  test3.rs  test4.rs  test5.rs
