[package]
name = "newer-type"
description = "Support defining newtype wrapper with inheriting trait implementations"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
version = "0.1.0"
repository = "https://github.com/yasuo-ozu/newer-type"
edition = "2021"
license = "MIT"
rust-version = "1.65.0"
homepage = "https://github.com/yasuo-ozu/newer-type"
keywords = ["newtype", "trait", "proc-macro", "attribute-macro"]
categories = ["rust-patterns", "data-structures"]


[lib]
path = "lib.rs"

[dependencies]
newer-type-macro = { path = "macro", version = "0.1.0" }

[workspace]
members = [".", "macro"]
resolver = "2"
