[package]
name = "newer-type-macro"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
version = "0.1.0"
repository = "https://github.com/yasuo-ozu/newer-type"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = { version = "1.0", default-features = false }
derive-syn-parse = "0.2.0"
proc-debug = "*"

[dependencies.syn]
version = "2.0"
features = ["full", "derive", "printing", "extra-traits", "visit", "visit-mut"]
