[package]
name = "newer-type-std"
description = "Support defining newtype wrapper with inheriting trait implementations"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
version = "0.1.2"
repository = "https://github.com/yasuo-ozu/newer-type"
edition = "2021"
license = "MIT"
rust-version = "1.65.0"
homepage = "https://github.com/yasuo-ozu/newer-type"
keywords = ["newtype", "trait", "proc-macro", "attribute-macro"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
newer-type = { path = "..", version = "0.1.2" }
